--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <ul id="cat-list"></ul>
     <div id="cat">
 
-        <h2 data-bind="text: name"></h2>
-        <h3 data-bind="text: level"></h3>
-        <div data-bind="text: clickCount"></div>
+        <h2 data-bind="text: currentCat().name"></h2>
+        <h3 data-bind="text: currentCat().level"></h3>
+        <div data-bind="text: currentCat().clickCount"></div>
         <div>
-            <img src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: imgSrc}">
+            <img src="" alt="cute cat" data-bind="click: incrementCounter, attr: {src: currentCat().imgSrc}">
         </div>
         <h4>Nicknames:</h4>
-        <ul data-bind="foreach: nicknames">
+        <ul data-bind="foreach: currentCat().nicknames">
             <li>
                 <span data-bind="text: name"> </span>
             </li>
