--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-    <ul id="cat-list"></ul>
+    <ul data-bind="foreach:catList" id="cat-list">
+        <li>
+            <span data-bind="text: name, click: $parent.fetchCat"> </span>
+        </li>
+    </ul>
     <div data-bind="with: currentCat">
 
         <h2 data-bind="text: name"></h2>
